--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,6 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: "core.settings"
-    PYTHONPATH: "/var/app/current:$PYTHONPATH"
+  
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "core.wsgi:application"
+    WSGIPath: "Forest_Fire_Index_Prediction/wsgi.py"
