--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,4 @@
 option_settings:
   
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "Forest_Fire_Index_Prediction/wsgi.py"
+    WSGIPath: Forest_Fire_Index_Prediction/wsgi.py
